// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Articles can be created/edited/deleted: can be created 1`] = `
{
  "data": {
    "createArticle": {
      "draft": {
        "publishedAt": null,
        "revision": 0,
        "updatedAt": null,
      },
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": null,
      "shared": false,
      "tags": ArrayContaining [
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 1",
        },
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 2",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Articles can be created/edited/deleted: can be deleted 1`] = `
{
  "data": {
    "deleteArticle": {
      "draft": {
        "publishedAt": null,
        "revision": 0,
        "updatedAt": null,
      },
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": null,
      "shared": false,
      "tags": [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Articles can be created/edited/deleted: can be published 1`] = `
{
  "data": {
    "publishArticle": {
      "draft": null,
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": {
        "publishedAt": 2020-11-25T23:55:35.000Z,
        "revision": 0,
        "updatedAt": 2020-11-25T23:55:35.000Z,
      },
      "shared": false,
      "tags": ArrayContaining [
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 1",
        },
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 2",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Articles can be created/edited/deleted: can be published in the future 1`] = `
{
  "data": {
    "publishArticle": {
      "draft": null,
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": {
        "publishAt": Any<Date>,
        "revision": 0,
      },
      "published": null,
      "shared": false,
      "tags": ArrayContaining [
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 1",
        },
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 2",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Articles can be created/edited/deleted: can be published twice in the future with authorIds 1`] = `
{
  "data": {
    "publishArticle": {
      "draft": null,
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": {
        "publishAt": Any<Date>,
        "revision": 1,
      },
      "published": null,
      "shared": false,
      "tags": ArrayContaining [
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 1",
        },
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 2",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Articles can be created/edited/deleted: can be published twice with authorIds 1`] = `
{
  "data": {
    "publishArticle": {
      "draft": null,
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": {
        "publishedAt": 2020-12-25T23:55:35.000Z,
        "revision": 1,
        "updatedAt": 2020-12-25T23:55:35.000Z,
      },
      "shared": false,
      "tags": [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Articles can be created/edited/deleted: can be read by id 1`] = `
{
  "data": {
    "article": {
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": null,
      "shared": false,
      "tags": ArrayContaining [
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 1",
        },
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 2",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Articles can be created/edited/deleted: can be unpublished 1`] = `
{
  "data": {
    "unpublishArticle": {
      "draft": {
        "publishedAt": null,
        "revision": 0,
        "updatedAt": null,
      },
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": null,
      "shared": false,
      "tags": ArrayContaining [
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 1",
        },
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 2",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Articles can be created/edited/deleted: can be updated 1`] = `
{
  "data": {
    "updateArticle": {
      "draft": {
        "publishedAt": null,
        "revision": 0,
        "updatedAt": null,
      },
      "id": Any<String>,
      "latest": ObjectContaining {
        "slug": Any<String>,
      },
      "pending": null,
      "published": null,
      "shared": false,
      "tags": ArrayContaining [
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 1",
        },
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 2",
        },
        ObjectContaining {
          "id": Any<String>,
          "tag": "Tag 3",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
